# ai-training-data-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: raw_training_data.csv
src/ai_training_data_pipeline/: cleaner.py  cli.py  exporter.py  loader.py  models.py  pipeline.py  validator.py
src/ai_training_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
