[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-training-data-pipeline"
version = "0.1.0"
description = "Python ETL pipeline for preparing AI training datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pydantic",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
ai-pipeline = "ai_training_data_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false